--- a/Dockerfile_no_ssl
+++ b/Dockerfile_no_ssl
@@ -5,7 +5,7 @@ RUN git clone --depth=1 https://github.com/tsl0922/ttyd.git /ttyd \
 FROM ubuntu:18.04
 COPY --from=0 /ttyd/build/ttyd /usr/bin/ttyd
 RUN apt-get update \
-    && apt-get install -y tcpdump net-tools dnsutils curl wget apt-transport-https gnupg2 \
+    && apt-get install -y tcpdump net-tools dnsutils curl wget apt-transport-https gnupg2 openssh-client \
     && curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key add - \
     && echo "deb https://apt.kubernetes.io/ kubernetes-xenial main" | tee -a /etc/apt/sources.list.d/kubernetes.list \
     && apt-get update \
