--- a/http/kube-shell-http.yaml
+++ b/http/kube-shell-http.yaml
@@ -115,8 +115,8 @@ spec:
           readOnlyRootFilesystem: true
           allowPrivilegeEscalation: false
           privileged: false
-          runAsNonRoot: false
-          #runAsNonRoot: true
+          #runAsNonRoot: false
+          runAsNonRoot: true
           #runAsUser: 9999
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
