--- a/http/kube-shell-http.yaml
+++ b/http/kube-shell-http.yaml
@@ -118,10 +118,17 @@ spec:
           #runAsNonRoot: false
           runAsNonRoot: true
           runAsUser: 9999
+        volumeMounts:
+        - mountPath: /user/k8soper
+          name: cache-volume
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
         stdin: true
         tty: true
+        tty: true
+      volumes:
+      - name: cache-volume
+        emptyDir: {}  
       dnsPolicy: ClusterFirst
       schedulerName: default-scheduler
       securityContext: {}
