--- a/https/deployment.yaml
+++ b/https/deployment.yaml
@@ -98,7 +98,7 @@ spec:
       - env:
         - name: CLUSTER_NAME
           value: democluster.vmware.local
-        image: whoami6443/ttyd_ssl:0.0.3
+        image: whoami6443/ttyd_ssl:0.0.5
         imagePullPolicy: IfNotPresent
         name: kube-shell
         ports:
@@ -115,12 +115,13 @@ spec:
           readOnlyRootFilesystem: true
           allowPrivilegeEscalation: false
           privileged: false
-          runAsNonRoot: false
-          #runAsNonRoot: true
-          #runAsUser: 9999
+          runAsNonRoot: true
+          runAsUser: 9999
         volumeMounts:
         - mountPath: /etc/ttyd_certs
           name: ssl-pem
+        - mountPath: /user/kshell
+          name: cache-volume
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
         stdin: true
@@ -129,6 +130,8 @@ spec:
       - name: ssl-pem
         secret:
           secretName: ssl-pem
+      - name: cache-volume
+        emptyDir: {}  
       dnsPolicy: ClusterFirst
       schedulerName: default-scheduler
       securityContext: {}
