--- a/http/Dockerfile
+++ b/http/Dockerfile
@@ -1,14 +1,15 @@
 #FROM tsl0922/musl-cross
-FROM ubuntu:18.04
+FROM ubuntu:20.04
+ENV DEBIAN_FRONTEND=nonintercative
 
 RUN apt-get update && apt-get install -y autoconf automake curl cmake git libtool make && apt-get -y upgrade \
     && git clone --depth=1 https://github.com/tsl0922/ttyd.git /ttyd \
     && cd /ttyd && env BUILD_TARGET=x86_64 WITH_SSL=true ./scripts/cross-build.sh
 
-FROM ubuntu:18.04
+FROM ubuntu:20.04
 COPY --from=0 /ttyd/build/ttyd /usr/bin/ttyd
 RUN apt-get update \
-    && apt-get install -y vim net-tools dnsutils curl wget apt-transport-https gnupg2 iputils-ping iputils-tracepath iproute2 openssh-client bash-completion && apt-get -y upgrade\
+    && apt-get install -y vim net-tools dnsutils curl wget apt-transport-https gnupg2 traceroute jq iproute2 openssh-client bash-completion && apt-get -y upgrade\
     && curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key add - \
     && echo "deb https://apt.kubernetes.io/ kubernetes-xenial main" | tee -a /etc/apt/sources.list.d/kubernetes.list \
     && apt-get update \
