--- a/http/deployment.yaml
+++ b/http/deployment.yaml
@@ -98,7 +98,7 @@ spec:
       - env:
         - name: CLUSTER_NAME
           value: democluster1.vmware.local
-        image: harbor.navneetv.com/whoami6443/ttyd_nossl:0.0.13
+        image: harbor.navneetv.com/whoami6443/ttyd_nossl:0.1.8
         imagePullPolicy: IfNotPresent
         name: kube-shell
         ports:
@@ -117,9 +117,9 @@ spec:
           privileged: false
           runAsNonRoot: true
           runAsUser: 9999
-        volumeMounts:
-        - mountPath: /user/kshell
-          name: cache-volume
+#       volumeMounts:
+#       - mountPath: /user/kshell
+#         name: cache-volume
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
         stdin: true
