--- a/https/Dockerfile-nonrootuser
+++ b/https/Dockerfile-nonrootuser
@@ -1,4 +1,3 @@
-#FROM tsl0922/musl-cross
 FROM ubuntu:20.04
 ENV DEBIAN_FRONTEND=nonintercative
 
@@ -9,7 +8,7 @@ RUN apt-get update && apt-get install -y autoconf automake curl cmake git libtoo
 FROM ubuntu:20.04
 COPY --from=0 /ttyd/build/ttyd /usr/bin/ttyd
 RUN apt-get update \
-    && apt-get install -y vim net-tools dnsutils curl wget apt-transport-https gnupg2 traceroute jq iproute2 openssh-client bash-completion && apt-get -y upgrade\
+    && apt-get install -y vim net-tools dnsutils curl wget apt-transport-https gnupg2 traceroute tcpdump jq iproute2 openssh-client bash-completion && apt-get -y upgrade\
     && curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key add - \
     && echo "deb https://apt.kubernetes.io/ kubernetes-xenial main" | tee -a /etc/apt/sources.list.d/kubernetes.list \
     && apt-get update \
@@ -17,9 +16,11 @@ RUN apt-get update \
 
 ADD https://github.com/krallin/tini/releases/download/v0.19.0/tini /sbin/tini
 RUN chmod +x /sbin/tini
+COPY ../certs/tls.crt /etc/ttyd_certs/tls.crt
+COPY ../certs/tls.key /etc/ttyd_certs/tls.key
 
 RUN mkdir -p /user/kshell
-RUN useradd kshell --uid 9999 -M -U --home-dir /user/kshell -s /bin/bash
+RUN useradd kshell --uid 9999 -M -U --home-dir /user/kshell
 
 RUN echo ". /usr/share/bash-completion/bash_completion" >> /user/kshell/.bashrc
 RUN echo "source <(kubectl completion bash)" >> /user/kshell/.bashrc
@@ -35,4 +36,4 @@ WORKDIR /user/kshell
 
 EXPOSE 7681
 ENTRYPOINT ["/sbin/tini", "--"]
-CMD ["ttyd", "bash"]
+CMD ["ttyd", "--ssl", "--ssl-cert", "/etc/ttyd_certs/tls.crt", "--ssl-key", "/etc/ttyd_certs/tls.key", "bash"]
