--- a/docker-https/Dockerfile-nonrootuser
+++ b/docker-https/Dockerfile-nonrootuser
@@ -16,11 +16,9 @@ RUN apt-get update \
 
 ADD https://github.com/krallin/tini/releases/download/v0.19.0/tini /sbin/tini
 RUN chmod +x /sbin/tini
-COPY ../certs/tls.crt /etc/ttyd_certs/tls.crt
-COPY ../certs/tls.key /etc/ttyd_certs/tls.key
 
 RUN mkdir -p /user/kshell
-RUN useradd kshell --uid 9999 -M -U --home-dir /user/kshell
+RUN useradd kshell --uid 9999 -M -U --home-dir /user/kshell -s /bin/bash
 
 RUN echo ". /usr/share/bash-completion/bash_completion" >> /user/kshell/.bashrc
 RUN echo "source <(kubectl completion bash)" >> /user/kshell/.bashrc
