--- a/deployment/deployment-http-ingress.yaml
+++ b/deployment/deployment-http-ingress.yaml
@@ -124,9 +124,9 @@ spec:
         terminationMessagePolicy: File
         stdin: true
         tty: true
-      volumes:
-      - name: cache-volume
-        emptyDir: {}
+#      volumes:
+#      - name: cache-volume
+#        emptyDir: {}
       dnsPolicy: ClusterFirst
       schedulerName: default-scheduler
       securityContext: {}
