--- a/deployment/deployment-http.yaml
+++ b/deployment/deployment-http.yaml
@@ -66,7 +66,7 @@ spec:
       targetPort: 7681
   selector:
     project.app: kube-shell
-  type: ClusterIP
+  type: LoadBalancer
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -98,7 +98,7 @@ spec:
       - env:
         - name: CLUSTER_NAME
           value: kube-shell.env1.lab.test
-        image: harbor-repo.vmware.com/navneetv/ttyd_nossl:0.1.10
+        image: harbor.navneetv.com/whoami6443/ttyd_nossl:0.1.10
         imagePullPolicy: IfNotPresent
         name: kube-shell
         ports:
@@ -124,81 +124,12 @@ spec:
         terminationMessagePolicy: File
         stdin: true
         tty: true
-      volumes:
-      - name: cache-volume
-        emptyDir: {}
+#      volumes:
+#      - name: cache-volume
+#        emptyDir: {}  
       dnsPolicy: ClusterFirst
       schedulerName: default-scheduler
       securityContext: {}
       serviceAccount: kube-shell
       serviceAccountName: kube-shell
       terminationGracePeriodSeconds: 30
----
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  annotations:
-    projectcontour.io/websocket-routes: "/ws"
-    cert-manager.io/cluster-issuer: ca-issuer
-    ingress.kubernetes.io/force-ssl-redirect: "true"
-    kubernetes.io/ingress.class: contour
-    kubernetes.io/tls-acme: "true"
-  name: kube-shell
-  namespace: kube-shell
-spec:
-  tls:
-  - secretName: kube-shell-tls
-    hosts:
-    - kube-shell.env1.lab.test
-  rules:
-  - host: kube-shell.env1.lab.test
-    http:
-      paths:
-      - pathType: Prefix
-        path: /
-        backend:
-          service:
-            name: kube-shell
-            port:
-              number: 80
-      - pathType: Prefix
-        path: /ws
-        backend:
-          service:
-            name: kube-shell
-            port:
-              number: 80
-#---
-#apiVersion: cert-manager.io/v1
-#kind: Certificate
-#metadata:
-#  name: kube-shell-cert
-#spec:
-#  commonName: kube-shell.env1.lab.test
-#  dnsNames:
-#  - kube-shell.env1.lab.test
-#  issuerRef:
-#    name: ca-issuer
-#    kind: ClusterIssuer
-#  secretName: kube-shell-tls
----
-#apiVersion: projectcontour.io/v1
-#kind: HTTPProxy
-#metadata:
-#  name: kube-shell
-#  namespace: kube-shell
-#spec:
-#  virtualhost:
-#    fqdn: kube-shell.env1.lab.test
-#    tls:
-#      secretName: kube-shell-tls
-#  routes:
-#  - services:
-#    - name: kube-shell
-#      port: 80
-#  - conditions:
-#    - prefix: /ws
-#    enableWebsockets: true
-#    services:
-#    - name: kube-shell
-#      port: 80
