--- a/deployment/cert-issuer.yaml
+++ b/deployment/cert-issuer.yaml
@@ -14,3 +14,24 @@ metadata:
 spec:
   ca:
     secretName: ca-key-pair
+#---
+# Uncomment below and comment above for SelfSigned certs
+#apiVersion: cert-manager.io/v1
+#kind: ClusterIssuer
+#metadata:
+#  name: ca-issuer
+#spec:
+#  selfSigned: {}
+#---
+#apiVersion: cert-manager.io/v1
+#kind: Certificate
+#metadata:
+#  name: kube-shell-cert
+#spec:
+#  commonName: kube-shell.env1.lab.test
+#  dnsNames:
+#  - kube-shell.env1.lab.test
+#  issuerRef:
+#    name: ca-issuer
+#    kind: ClusterIssuer
+#  secretName: kube-shell-tls
