--- a/deployment/deployment-http.yaml
+++ b/deployment/deployment-http.yaml
@@ -98,7 +98,7 @@ spec:
       - env:
         - name: CLUSTER_NAME
           value: kube-shell.env1.lab.test
-        image: harbor.navneetv.com/whoami6443/ttyd_nossl:0.1.10
+        image: whoami6443/ttyd_nossl:0.1.10
         imagePullPolicy: IfNotPresent
         name: kube-shell
         ports:
