--- a/docker-http/Dockerfile-rootuser
+++ b/docker-http/Dockerfile-rootuser
@@ -1,6 +1,9 @@
 FROM ubuntu:20.04
 ENV DEBIAN_FRONTEND=nonintercative
 
+# ADD https://github.com/tsl0922/ttyd/releases/download/1.6.3/ttyd.x86_64 /usr/bin/ttyd
+# RUN chmod +x /usr/bin/ttyd
+# remove the next 3 lines and uncomment the top 2 lines if the build fails.
 RUN apt-get update && apt-get install -y autoconf automake curl cmake git libtool make && apt-get -y upgrade \
     && git clone --depth=1 https://github.com/tsl0922/ttyd.git /ttyd \
     && cd /ttyd && env BUILD_TARGET=x86_64 WITH_SSL=true ./scripts/cross-build.sh
