--- a/docker-http/Dockerfile-nonrootuser
+++ b/docker-http/Dockerfile-nonrootuser
@@ -1,39 +1,24 @@
-FROM ubuntu:22.04
-ENV DEBIAN_FRONTEND=nonintercative
+FROM ubuntu:20.04
+ENV DEBIAN_FRONTEND=noninteractive
+
+RUN apt-get update \
+    && apt-get install -y vim net-tools dnsutils curl wget apt-transport-https gnupg2 traceroute tcpdump jq iproute2 openssh-client bash-completion && apt-get -y upgrade\
+    && curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"\
+    && install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl\
+    && rm -f kubectl
 
 ADD https://github.com/tsl0922/ttyd/releases/download/1.7.2/ttyd.x86_64 /usr/bin/ttyd
 RUN chmod +x /usr/bin/ttyd
 
 ADD https://github.com/krallin/tini/releases/download/v0.19.0/tini /sbin/tini
 RUN chmod +x /sbin/tini
-# remove the next 3 lines and uncomment the top 2 lines if the build fails.
-# RUN apt-get update && apt-get install -y autoconf automake curl cmake git libtool make && apt-get -y upgrade \
-#    && git clone --depth=1 https://github.com/tsl0922/ttyd.git /ttyd \
-#    && cd /ttyd && env BUILD_TARGET=x86_64 WITH_SSL=true ./scripts/cross-build.sh
 
-#FROM ubuntu:20.04
-#COPY --from=0 /ttyd/build/ttyd /usr/bin/ttyd
-RUN apt-get update \
-    && apt-get install -y vim net-tools dnsutils curl wget apt-transport-https gnupg2 traceroute tcpdump jq iproute2 openssh-client bash-completion && apt-get -y upgrade\
-    && curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"\
-    && install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
+RUN mkdir -p /user
+RUN useradd kshell --create-home --uid 9999 -U --home-dir /user/kshell --base-dir /user -s /usr/bin/bash
 
-#    && curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key add - \
-#    && echo "deb https://apt.kubernetes.io/ kubernetes-xenial main" | tee -a /etc/apt/sources.list.d/kubernetes.list \
-#    && apt-get update \
-#    && apt-get install -y kubectl
-
-RUN mkdir -p /user/kshell
-RUN useradd kshell --uid 9999 -M -U --home-dir /user/kshell -s /bin/bash
-
-RUN echo ". /usr/share/bash-completion/bash_completion" >> /user/kshell/.bashrc
-RUN echo "source <(kubectl completion bash)" >> /user/kshell/.bashrc
-RUN echo "export PS1=\"\\e[0;32m[\\u@\\h \\W]\\$ \\e[0m\"" >> /user/kshell/.bashrc
-RUN echo "alias ls=\"ls --color=auto\"" >> /user/kshell/.bashrc
-RUN echo "alias grep=\"grep --color=auto\"" >> /user/kshell/.bashrc
-RUN echo "shopt -s checkwinsize" >> /user/kshell/.bashrc
-RUN chmod +x /user/kshell/.bashrc
-RUN chown kshell:kshell /user/kshell/.bashrc
+RUN echo "source /usr/share/bash-completion/bash_completion" >> /etc/bash.bashrc
+RUN echo "source <(kubectl completion bash)" >> /etc/bash.bashrc
+RUN sed -i 's/#force_color_prompt=yes/force_color_prompt=yes/' /user/kshell/.bashrc
 
 USER kshell
 WORKDIR /user/kshell
