--- a/deployment/deployment-http-root.yaml
+++ b/deployment/deployment-http-root.yaml
@@ -101,7 +101,7 @@ spec:
         - name: CLUSTER_NAME
           value: kube-shell.env1.lab.test
         - name: TINI_SUBREAPER
-        image: whoami6443/ttyd_nossl:0.2.3
+        image: whoami6443/ttyd_nossl_root:0.4.8
         imagePullPolicy: IfNotPresent
         name: kube-shell
         ports:
