--- a/docker-http/Dockerfile-rootuser
+++ b/docker-http/Dockerfile-rootuser
@@ -1,28 +1,23 @@
-FROM ubuntu:20.04
+FROM ubuntu:22.04
 ENV DEBIAN_FRONTEND=noninteractive
 
-# remove the next 3 lines and uncomment the top 2 lines if the build fails.
-# RUN apt-get update && apt-get install -y autoconf automake curl cmake git libtool make && apt-get -y upgrade \
-#    && git clone --depth=1 https://github.com/tsl0922/ttyd.git /ttyd \
-#    && cd /ttyd && env BUILD_TARGET=x86_64 WITH_SSL=true ./scripts/cross-build.sh
-#FROM ubuntu:20.04
-#COPY --from=0 /ttyd/build/ttyd /usr/bin/ttyd
-
-RUN apt-get update \
-    && apt-get install -y vim net-tools dnsutils curl wget apt-transport-https gnupg2 traceroute tcpdump jq iproute2 openssh-client bash-completion && apt-get -y upgrade\
+RUN apt-get update\ 
+    && apt-get install -y vim net-tools dnsutils curl wget apt-transport-https gnupg2 traceroute tcpdump jq iproute2 openssh-client bash-completion\
+    && apt-get -y upgrade\
     && curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"\
     && install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl\
-    && rm -f kubectl
+    && rm -f kubectl\
+    && rm -rf /var/lib/apt/lists/*
 
 ADD https://github.com/tsl0922/ttyd/releases/download/1.7.2/ttyd.x86_64 /usr/bin/ttyd
-RUN chmod +x /usr/bin/ttyd
-
 ADD https://github.com/krallin/tini/releases/download/v0.19.0/tini /sbin/tini
-RUN chmod +x /sbin/tini
 
-RUN echo "source /usr/share/bash-completion/bash_completion" >> /etc/bash.bashrc
-RUN echo "source <(kubectl completion bash)" >> /etc/bash.bashrc
-RUN sed -i 's/#force_color_prompt=yes/force_color_prompt=yes/' /root/.bashrc
+RUN chmod +x /usr/bin/ttyd\
+    && chmod +x /sbin/tini
+
+RUN echo "source /usr/share/bash-completion/bash_completion" >> /etc/bash.bashrc\
+    && echo "source <(kubectl completion bash)" >> /etc/bash.bashrc\
+    && sed -i 's/#force_color_prompt=yes/force_color_prompt=yes/' /root/.bashrc
 
 USER root
 WORKDIR /root
