--- a/deployment/deployment-http-root.yaml
+++ b/deployment/deployment-http-root.yaml
@@ -66,8 +66,8 @@ spec:
       targetPort: 7681
   selector:
     project.app: kube-shell
-#  type: LoadBalancer
-  type: ClusterIP
+  type: LoadBalancer
+    #  type: ClusterIP
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -101,7 +101,7 @@ spec:
         - name: CLUSTER_NAME
           value: kube-shell.env1.lab.test
         - name: TINI_SUBREAPER
-        image: whoami6443/ttyd_nossl_root:0.5.0
+        image: whoami6443/ttyd_nossl_root:0.6.0
         imagePullPolicy: IfNotPresent
         name: kube-shell
         ports:
@@ -136,47 +136,47 @@ spec:
       terminationGracePeriodSeconds: 30
 ---
 # Uncomment ClusterIssuer and Certificate below for SelfSigned certs
-apiVersion: cert-manager.io/v1
-kind: ClusterIssuer
-metadata:
-  name: ca-issuer-selfsigned
-spec:
-  selfSigned: {}
----
-apiVersion: cert-manager.io/v1
-kind: Certificate
-metadata:
-  name: kube-shell-cert
-  namespace: k8s-papivot-tools
-spec:
-  commonName: kube-shell.env1.lab.test
-#  commonName: kube-shell.{{ENVOY_KB_IP}}.nip.io
-  dnsNames:
-  - kube-shell.env1.lab.test
+#apiVersion: cert-manager.io/v1
+#kind: ClusterIssuer
+#metadata:
+#  name: ca-issuer-selfsigned
+#spec:
+#  selfSigned: {}
+#---
+#apiVersion: cert-manager.io/v1
+#kind: Certificate
+#metadata:
+#  name: kube-shell-cert
+#  namespace: k8s-papivot-tools
+#spec:
+#  commonName: kube-shell.env1.lab.test
+##  commonName: kube-shell.{{ENVOY_KB_IP}}.nip.io
+#  dnsNames:
+#  - kube-shell.env1.lab.test
 #  - kube-shell.{{ENVOY_KB_IP}}.nip.io
-  issuerRef:
-    name: ca-issuer-selfsigned
-    kind: ClusterIssuer
-  secretName: kube-shell-tls
----
-apiVersion: projectcontour.io/v1
-kind: HTTPProxy
-metadata:
-  name: kube-shell
-  namespace: k8s-papivot-tools
-spec:
-  virtualhost:
-    fqdn: kube-shell.env1.lab.test
+#  issuerRef:
+#    name: ca-issuer-selfsigned
+#    kind: ClusterIssuer
+#  secretName: kube-shell-tls
+#---
+#apiVersion: projectcontour.io/v1
+#kind: HTTPProxy
+#metadata:
+#  name: kube-shell
+#  namespace: k8s-papivot-tools
+#spec:
+#  virtualhost:
+#    fqdn: kube-shell.env1.lab.test
 #    fqdn: kube-shell.{{ENVOY_KB_IP}}.nip.io
-    tls:
-      secretName: kube-shell-tls
-  routes:
-  - services:
-    - name: kube-shell
-      port: 80
-  - conditions:
-    - prefix: /ws
-    enableWebsockets: true
-    services:
-    - name: kube-shell
-      port: 80
+#    tls:
+#      secretName: kube-shell-tls
+#  routes:
+#  - services:
+#    - name: kube-shell
+#      port: 80
+#  - conditions:
+#    - prefix: /ws
+#    enableWebsockets: true
+#    services:
+#    - name: kube-shell
+#      port: 80
