--- a/docker-http/Dockerfile-rootuser
+++ b/docker-http/Dockerfile-rootuser
@@ -1,15 +1,15 @@
 FROM ubuntu:22.04
 ENV DEBIAN_FRONTEND=noninteractive
 
-RUN apt-get update\ 
-    && apt-get install -y vim net-tools dnsutils curl wget apt-transport-https gnupg2 traceroute tcpdump jq iproute2 openssh-client bash-completion\
+RUN apt-get update\
+    && apt-get install -y vim net-tools dnsutils curl wget apt-transport-https gnupg2 traceroute tcpdump jq iproute2 openssh-client bash-completion mtr util-linux\
     && apt-get -y upgrade\
     && curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"\
     && install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl\
     && rm -f kubectl\
     && rm -rf /var/lib/apt/lists/*
 
-ADD https://github.com/tsl0922/ttyd/releases/download/1.7.2/ttyd.x86_64 /usr/bin/ttyd
+ADD https://github.com/tsl0922/ttyd/releases/download/1.7.3/ttyd.x86_64 /usr/bin/ttyd
 ADD https://github.com/krallin/tini/releases/download/v0.19.0/tini /sbin/tini
 
 RUN chmod +x /usr/bin/ttyd\
